--- a/force-app/main/default/lwc/checkintable/checkintable.html
+++ b/force-app/main/default/lwc/checkintable/checkintable.html
@@ -8,16 +8,16 @@
             <div class="slds-truncate" title="Name">Name</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Name">Check In By</div>
+            <div class="slds-truncate" title="Check In By">Check In By</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Check in Date</div>
+            <div class="slds-truncate" title="Check in Date">Check in Date</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Comments</div>
+            <div class="slds-truncate" title="Comments">Comments</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Status</div>
+            <div class="slds-truncate" title="Status">Status</div>
           </th>
           
         </tr>
