--- a/force-app/main/default/lwc/pulsetable/pulsetable.html
+++ b/force-app/main/default/lwc/pulsetable/pulsetable.html
@@ -5,40 +5,40 @@
       <thead>
         <tr class="slds-line-height_reset" style="color:lightcoral">
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Name">Pulse Id</div>
+            <div class="slds-truncate" title="Pulse Id">Pulse Id</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Pulse Date</div>
+            <div class="slds-truncate" title="Pulse Date">Pulse Date</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Carrer Dev</div>
+            <div class="slds-truncate" title="Carrer Dev">Carrer Dev</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Job Stats</div>
+            <div class="slds-truncate" title="Job Stats">Job Stats</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Work Env</div>
+            <div class="slds-truncate" title="Work Env">Work Env</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Communication</div>
+            <div class="slds-truncate" title="Communication">Communication</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Work Life</div>
+            <div class="slds-truncate" title="Work Life">Work Life</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Feedback</div>
+            <div class="slds-truncate" title="Feedback">Feedback</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Leadership</div>
+            <div class="slds-truncate" title="Leadership">Leadership</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Overall</div>
+            <div class="slds-truncate" title="Overall">Overall</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">OverallComments</div>
+            <div class="slds-truncate" title="OverallComments">OverallComments</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Status</div>
+            <div class="slds-truncate" title="Status">Status</div>
           </th>
          
         </tr>
