--- a/force-app/main/default/lwc/kratable/kratable.html
+++ b/force-app/main/default/lwc/kratable/kratable.html
@@ -14,16 +14,16 @@
             <div class="slds-truncate" title="Fiscal Year">Fiscal Year</div>
           </th>
            <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Name">Status</div>
+            <div class="slds-truncate" title="Status">Status</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Name">Rating</div>
+            <div class="slds-truncate" title="Rating">Rating</div>
           </th>
            <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Name">Next Apprasial</div>
+            <div class="slds-truncate" title="Next Apprasial">Next Apprasial</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Last Modified</div>
+            <div class="slds-truncate" title="Last Modified">Last Modified</div>
           </th>
           <th class="tableheading" scope="col">
             <div class="slds-truncate" title="Actions">Actions</div>
@@ -88,23 +88,23 @@
                           <div class="slds-truncate" title="Name">Name</div>
                         </th>
                         <th class="slds-border_right tableheading" scope="col">
-                          <div class="slds-truncate" title="Title">Start Date</div>
+                          <div class="slds-truncate" title="Start Date">Start Date</div>
                         </th>
                         <th class="slds-border_right tableheading" scope="col" >
-                          <div class="slds-truncate" title="Email">End date</div>
+                          <div class="slds-truncate" title="End date">End date</div>
                         </th>
                         <th class="slds-border_right tableheading" scope="col">
-                          <div class="slds-truncate" title="phoneNumber">Status</div>
+                          <div class="slds-truncate" title="Status">Status</div>
                         </th>
 
                         <th class="slds-border_right tableheading" scope="col">
-                          <div class="slds-truncate" title="Response">Type</div>
+                          <div class="slds-truncate" title="Type">Type</div>
                         </th>
                         <th class="slds-border_right tableheading" scope="col"  >
-                          <div class="slds-truncate" title="Mailing Address">Rating</div>
+                          <div class="slds-truncate" title="Rating">Rating</div>
                         </th>
                         <th class="slds-border_right tableheading" scope="col"  >
-                          <div class="slds-truncate" title="Mailing Address"> Actions</div>
+                          <div class="slds-truncate" title="Actions"> Actions</div>
                         </th>
                       </tr>
                     </thead>
@@ -224,7 +224,7 @@
                    size="small" ></lightning-icon>
                 <span class="slds-assistive-text">Close</span>
              </button>
-             <h2 id="modal-heading-01" class="slds-text-heading_medium slds-hyphenate">Quaterly KRA View</h2>
+             <h2 id="modal-heading-01" class="slds-text-heading_medium slds-hyphenate">Quarterly KRA View</h2>
           </header>
       
           <!-- modal body start -->
@@ -264,7 +264,7 @@
                    size="small" ></lightning-icon>
                 <span class="slds-assistive-text">Close</span>
              </button>
-             <h2 id="modal-heading-02" class="slds-text-heading_medium slds-hyphenate">Quaterly KRA Edit</h2>
+             <h2 id="modal-heading-02" class="slds-text-heading_medium slds-hyphenate">Quarterly KRA Edit</h2>
           </header>
       
           <!-- modal body start -->
