--- a/force-app/main/default/lwc/mynominations/mynominations.html
+++ b/force-app/main/default/lwc/mynominations/mynominations.html
@@ -5,28 +5,28 @@
       <thead>
         <tr class="slds-line-height_reset" style="color:lightsalmon">
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Name">Resource</div>
+            <div class="slds-truncate" title="Resource">Resource</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Award Type</div>
+            <div class="slds-truncate" title="Award Type">Award Type</div>
            </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Name"># of Primary Nominations</div>
+            <div class="slds-truncate" title="# of Primary Nominations"># of Primary Nominations</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Name"># of Secondary Nominations</div>
+            <div class="slds-truncate" title="# of Secondary Nominations"># of Secondary Nominations</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Comments</div>
+            <div class="slds-truncate" title="Comments">Comments</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Submitted On</div>
+            <div class="slds-truncate" title="Submitted On">Submitted On</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Type</div>
+            <div class="slds-truncate" title="Type">Type</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Status</div>
+            <div class="slds-truncate" title="Status">Status</div>
           </th>
         </tr>
       </thead>
@@ -38,11 +38,15 @@
             <tr key={sout.resourceId}>
             <td style="word-wrap:break-word;">
                 <div class="slds-wrap">
-                    <a href="#"><b>{sout.resourceName}</b></a></div>
+                    <!-- <a href="#"><b>{sout.resourceName}</b></a> -->
+                    <p><b>{sout.resourceName}</b></p>
+                  </div>
               </td>
              <td style="word-wrap:break-word;">
                 <div class="slds-wrap">
-                    <a href="#"><b>{sout.awardType}</b></a></div>
+                    <!-- <a href="#"><b>{sout.awardType}</b></a> -->
+                    <p><b>{sout.awardType}</b></p>
+                  </div>
               </td>
               <td>
                  <div class="slds-wrap">
@@ -61,7 +65,10 @@
                 <div class="slds-wrap"><lightning-formatted-date-time value={sout.createdDate}></lightning-formatted-date-time></div>
               </td>
                 <td>
-                <div class="slds-wrap"> <a href="#">{sout.projectName}</a></div>
+                <div class="slds-wrap"> 
+                  <!-- <a href="#">{sout.projectName}</a> -->
+                  <p>{sout.projectName}</p>
+                </div>
                </td>
                 <td>
                 <div class="slds-wrap"> {sout.Title}</div>
