--- a/force-app/main/default/lwc/showkragoals/showkragoals.html
+++ b/force-app/main/default/lwc/showkragoals/showkragoals.html
@@ -5,22 +5,22 @@
       <thead>
         <tr class="slds-line-height_reset" style="color:lightcoral">
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Name">Goal</div>
+            <div class="slds-truncate" title="Goal Name">Goal</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Start Date</div>
+            <div class="slds-truncate" title="Start Date">Start Date</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">End Date</div>
+            <div class="slds-truncate" title="End Date">End Date</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Description</div>
+            <div class="slds-truncate" title="Description">Description</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Final Comments</div>
+            <div class="slds-truncate" title="Final Comments">Final Comments</div>
           </th>
            <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Status</div>
+            <div class="slds-truncate" title="Status">Status</div>
           </th>
           <th class="tableheading" scope="col">
             <div class="slds-truncate" title="Actions">Actions</div>
