--- a/force-app/main/default/lwc/checkintable/checkintable.html
+++ b/force-app/main/default/lwc/checkintable/checkintable.html
@@ -11,7 +11,7 @@
             <div class="slds-truncate" title="Check In By">Check In By</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Check in Date">Check in Date</div>
+            <div class="slds-truncate" title="Check in Date">Check In Date</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
             <div class="slds-truncate" title="Comments">Comments</div>
