--- a/force-app/main/default/lwc/myMetrics/myMetrics.html
+++ b/force-app/main/default/lwc/myMetrics/myMetrics.html
@@ -30,7 +30,7 @@
         <lightning-input data-id="toggle1" type="toggle" label="Show All Check Ins" onchange={checkInToggle}
              message-toggle-active="" message-toggle-inactive=""></lightning-input>
               <lightning-input data-id="toggle2" type="toggle" label="Show All pulse" onchange={pulseToggle}
-             message-toggle-active="" message-toggle-inactive=""></lightning-input>
+             message-toggle-active="" message-toggle-inactive="" disabled={disableButton}></lightning-input>
               <lightning-input data-id="toggle3" type="toggle" label="Show All KRA's" onchange={kraToggle}
              message-toggle-active="" message-toggle-inactive=""></lightning-input>
        </div>
