--- a/force-app/main/default/lwc/pulsetable/pulsetable.html
+++ b/force-app/main/default/lwc/pulsetable/pulsetable.html
@@ -82,7 +82,7 @@
                 <div class="slds-wrap"><lightning-formatted-rich-text  value={accWithContacts.LeadershipRating}></lightning-formatted-rich-text></div>
               </td>
                <td>
-                <div class="slds-wrap"><lightning-formatted-rich-text  value={accWithContacts.overallRating}></lightning-formatted-rich-text></div>
+                <div class="slds-wrap"><lightning-formatted-rich-text  value={accWithContacts.overallPulseRating}></lightning-formatted-rich-text></div>
               </td>
 
               <td style="width:200px;word-wrap:break-word;">
