--- a/force-app/main/default/lwc/quarterlykraedit/quarterlykraedit.html
+++ b/force-app/main/default/lwc/quarterlykraedit/quarterlykraedit.html
@@ -658,7 +658,7 @@
 
                             <template if:true={viewwrap.showTeamwork}>
                                 <lightning-layout-item padding="around-small" size="4">
-                                    <p>Teamwork Rating</p>
+                                    <p>Teamwork</p>
                                 </lightning-layout-item>
                                 <lightning-layout-item padding="around-small" size="4">
                                     <lightning-input required type="number" min="1" max="5" message-when-range-overflow="Enter Value between 1 to 5" variant="label-stacked" label="Rating"
