--- a/force-app/main/default/lwc/rewardsAndRecog/rewardsAndRecog.html
+++ b/force-app/main/default/lwc/rewardsAndRecog/rewardsAndRecog.html
@@ -5,7 +5,7 @@
     <div class="btn">
      <lightning-button variant="brand" label="Shout Out" title="Shout Out" onclick={showShoutOutiewModalBox} ></lightning-button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
      <lightning-button variant="brand" label="Recognise" title="Recognise" onclick={showRecModalBox} disabled={drecognise} ></lightning-button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-     <lightning-button variant="brand" label="Award Nominations" title="Award Nominations" onclick={showAnnualModalBox} disabled={disableNominations} ></lightning-button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+     <lightning-button variant="brand" label="Award Nominations" title="Award Nominations" onclick={showAnnualModalBox} disabled={dNominations} ></lightning-button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </div>        
 </div>
 
