--- a/force-app/main/default/lwc/shoutoutgiven/shoutoutgiven.html
+++ b/force-app/main/default/lwc/shoutoutgiven/shoutoutgiven.html
@@ -39,9 +39,9 @@
                   </div>
               </td>
               <td>
-                 <a href="javascript:void(0);" data-id={sout.resourceId}>
-                      {sout.resourceName}
-                    </a>
+                <!-- <a href="javascript:void(0);" data-id={sout.resourceId}> </a>-->
+                      <p>{sout.resourceName}</p>
+                   
                   
               </td>
               <td>
