--- a/force-app/main/default/lwc/rewardsAndRecog/rewardsAndRecog.html
+++ b/force-app/main/default/lwc/rewardsAndRecog/rewardsAndRecog.html
@@ -179,7 +179,7 @@
      </lightning-card>
  </template>
 
-   <!--shout out modal start -->      
+   <!-- NEW Recognize modal start -->      
    <template if:true={openRecogize}>
      <lightning-card>
       <section role="dialog" tabindex="-1" aria-labelledby="modal-heading-01" aria-modal="true" aria-describedby="modal-content-id-1" class="slds-modal slds-fade-in-open">
