--- a/force-app/main/default/lwc/scroingaward/scroingaward.html
+++ b/force-app/main/default/lwc/scroingaward/scroingaward.html
@@ -31,28 +31,28 @@
       <thead>
         <tr class="slds-line-height_reset" style="color:lightcoral">
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Resource</div>
+            <div class="slds-truncate" title="Resource">Resource</div>
            </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Name"># Of Primary</div>
+            <div class="slds-truncate" title="# Of Primary"># Of Primary</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Name"># Of Secondary</div>
+            <div class="slds-truncate" title="# Of Secondary"># Of Secondary</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Total Noms</div>
+            <div class="slds-truncate" title="Total Noms">Total Noms</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Reason for noms</div>
+            <div class="slds-truncate" title="Reason for Noms">Reason for Noms</div>
           </th>
           <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Predicted Status</div>
+            <div class="slds-truncate" title="Predicted Status">Predicted Status</div>
           </th>
            <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Comments</div>
+            <div class="slds-truncate" title="Comments">Comments</div>
            </th>
            <th class="slds-border_right tableheading" scope="col">
-            <div class="slds-truncate" title="Location">Actual Status</div>
+            <div class="slds-truncate" title="Actual Status">Actual Status</div>
            </th>
         </tr>
       </thead>
@@ -215,7 +215,7 @@
                    size="small" ></lightning-icon>
                 <span class="slds-assistive-text">Close</span>
              </button>
-             <h2 id="modal-heading-04" class="slds-text-heading_medium slds-hyphenate">Comparsion</h2>
+             <h2 id="modal-heading-04" class="slds-text-heading_medium slds-hyphenate">comparison</h2>
           </header>
       
           <!-- modal body start -->
